# Laboratory-work-5

./: CMakeLists.txt  library.h  main.c
func/copyMass/: copyMass.c  copyMass.h
func/goBack/: goBack.c  goBack.h
func/isSorted/: isSorting.c  isSorting.h
func/poisk/binary/: binary.c  binary.h
func/poisk/lineal/: lineal.c  lineal.h
func/randvVod/: randVvod.c  randVvod.h
func/sort/counting/: counting.c  counting.h
func/sort/pyzir/: pyzir.c  pyzir.h
func/sort/quickSort/: quickSort.c  quickSort.h
func/sort/sliyanie/: sliyanie.c  sliyanie.h
func/sort/vibor/: vibor.c  vibor.h
func/sort/vstavka/: vstavka.c  vstavka.h
func/vuvod/: vuvod.c  vuvod.h
func/vvod/: vvod.c  vvod.h
